[package]
name = "notes"
version = "0.4.2"
edition = "2021"

[dependencies]
egui = "0.32.3"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
dirs = "6.0.0"
rand = { version = "0.9.2", default-features = false, features = ["small_rng", "thread_rng"] }

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.32.3", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }

[target.'cfg(target_os = "windows")'.dependencies]
eframe = { version = "0.32.3", default-features = false, features = ["default_fonts", "glow"] }

[target.'cfg(target_os = "macos")'.dependencies]
eframe = { version = "0.32.3", default-features = false, features = ["default_fonts", "glow"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true